[gd_scene load_steps=12 format=3 uid="uid://cp0mspwu7jrqq"]

[ext_resource type="Script" path="res://upgrade_turret_ui.gd" id="1_kqy0p"]
[ext_resource type="Texture2D" uid="uid://dbemq5nd1ilpe" path="res://assets/art/sprites/turret_01_upgraded_01.png" id="2_gbjr8"]
[ext_resource type="Texture2D" uid="uid://blatmducs31wl" path="res://assets/art/sprites/turret_base_01.png" id="3_dgrwy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pcf31"]
atlas = ExtResource("2_gbjr8")
region = Rect2(0, 0, 20, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_r342s"]
atlas = ExtResource("2_gbjr8")
region = Rect2(21, 0, 20, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5ph4"]
atlas = ExtResource("2_gbjr8")
region = Rect2(42, 0, 20, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_j65jh"]
atlas = ExtResource("2_gbjr8")
region = Rect2(63, 0, 20, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfl0g"]
atlas = ExtResource("2_gbjr8")
region = Rect2(84, 0, 20, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_edfo5"]
atlas = ExtResource("2_gbjr8")
region = Rect2(105, 0, 20, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3inv"]
atlas = ExtResource("2_gbjr8")
region = Rect2(126, 0, 20, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_st1g5"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_pcf31")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_r342s")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_g5ph4")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_j65jh")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_hfl0g")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_edfo5")
}, {
"duration": 14.0,
"texture": SubResource("AtlasTexture_e3inv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcf31")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[node name="BuildingUI" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kqy0p")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
grow_horizontal = 2
grow_vertical = 0

[node name="TurretDouble" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Container" type="Container" parent="HBoxContainer/TurretDouble"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/TurretDouble/Container"]
texture = ExtResource("3_dgrwy")

[node name="TurretCannon" type="AnimatedSprite2D" parent="HBoxContainer/TurretDouble/Container"]
position = Vector2(0, 2)
sprite_frames = SubResource("SpriteFrames_st1g5")
frame = 7
frame_progress = 1.0
offset = Vector2(-0.5, -6)

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/TurretDouble"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "Miner
Produces scrap"

[node name="TurretThunk" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Container" type="Container" parent="HBoxContainer/TurretThunk"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/TurretThunk"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -48.0
grow_horizontal = 2
grow_vertical = 0

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/TurretThunk/RichTextLabel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "Turret
Shoots of enemies"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="HBoxContainer/TurretDouble" to="." method="_on_turret_double_pressed"]
[connection signal="pressed" from="HBoxContainer/TurretThunk" to="." method="_on_turret_thunk_pressed"]
